<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/popular"
        android:enabled="true"
        android:title="@string/popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/top_rate"
        android:enabled="true"
        android:title="@string/top_rated"
        app:showAsAction="never"/>

    <item
        android:id="@+id/upcoming"
        android:enabled="true"
        android:title="@string/upcoming"
        app:showAsAction="never"/>

    <item
        android:id="@+id/now_playing"
        android:enabled="true"
        android:title="@string/now_playing"
        app:showAsAction="never"/>

    <item
        android:id="@+id/latest"
        android:enabled="true"
        android:title="@string/latest"
        app:showAsAction="never"/>
</menu>