<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/popular"
        android:enabled="true"
        android:title="@string/popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/top_rated"
        android:enabled="true"
        android:title="@string/top_rated"
        app:showAsAction="never"/>

    <item
        android:id="@+id/on_the_air"
        android:enabled="true"
        android:title="@string/on_the_air"
        app:showAsAction="never"/>

    <item
        android:id="@+id/airing_today"
        android:enabled="true"
        android:title="@string/airing_today"
        app:showAsAction="never"/>

    <item
        android:id="@+id/show_latest"
        android:enabled="true"
        android:title="@string/latest"
        app:showAsAction="never"/>
</menu>