<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search_title"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/genre_filter"
        android:enabled="true"
        android:icon="@drawable/ic_round_filter_list_24"
        android:title="@string/sort_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/certification_sort"
        android:enabled="true"
        android:icon="@drawable/ic_round_shield_24"
        android:title="@string/certification_title"
        app:showAsAction="ifRoom"/>

</menu>