<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.75"
            android:contentDescription="@string/backdrop" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/poster_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="105dp"
            android:layout_height="158dp"
            android:layout_marginStart="32dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@id/backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backdrop">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster" />

        </com.google.android.material.card.MaterialCardView>

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/poster_card"
            app:layout_constraintStart_toStartOf="@id/poster_card"
            app:layout_constraintTop_toBottomOf="@id/poster_card" />

        <LinearLayout
            android:id="@+id/summary_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/backdrop"
            app:layout_constraintStart_toEndOf="@id/poster_card"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/movie_title_ex"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorContentTextOnPrimary"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:text="@string/movie_date_ex"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorContentTextOnPrimary"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:text="@string/movie_genre_ex"
                android:fontFamily="@font/roboto_medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/show_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_round_event_24"
                    android:contentDescription="@string/show_times" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showtimes"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="7dp"
                    android:textColor="?attr/colorContentTextOnPrimary"/>
            </LinearLayout>
        </LinearLayout>


        <!--androidx.constraintlayout.widget.Barrier
            android:id="@+id/movie_poster_title_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids=""
            tools:layout_editor_absoluteY="277dp" /-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/movie_overview_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:text="@string/overview"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/overview_content"
                android:textColor="?attr/colorContentTextOnPrimary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/movie_cast_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:text="@string/cast"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/movie_overview_header"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

            <HorizontalScrollView
                android:id="@+id/movie_cast_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:id="@+id/movie_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/movie_trailers_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:text="@string/trailers"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/movie_cast_header"
                app:layout_constraintTop_toBottomOf="@+id/movie_cast_container" />

            <HorizontalScrollView
                android:id="@+id/movie_trailers_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/movie_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/similar_movies"/>

            <HorizontalScrollView
                android:id="@+id/similar_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <LinearLayout
                    android:id="@+id/similar_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/movie_reviews_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:text="@string/reviews"
                android:textColor="?attr/colorTitleTextOnPrimary"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/movie_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_watch_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#805ec1"
                android:textColor="@color/white"
                android:text="@string/add_to_watch_list"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>